--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-portable-text": "^0.6.0",
     "sanity": "^3.12.0",
     "tailwindcss": "3.3.2",
