use  localStorage in context

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,8 +12,10 @@
   },
   "cSpell.words": [
     "Carousoal",
+    "cartstate",
     "FORAPI",
     "ftype",
+    "iniatiziler",
     "Jeckets",
     "orginal",
     "orignal",
