--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,10 +11,12 @@
     "editor.defaultFormatter": "vscode.typescript-language-features"
   },
   "cSpell.words": [
+    "Aqib",
     "Carousoal",
     "cartstate",
     "FORAPI",
     "ftype",
+    "hackthonone",
     "iniatiziler",
     "Jeckets",
     "orginal",
