update some page  and firbase

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,16 +11,22 @@
     "editor.defaultFormatter": "vscode.typescript-language-features"
   },
   "cSpell.words": [
+    "abdf",
+    "appspot",
     "Carousoal",
     "cartstate",
+    "firebaseapp",
     "FORAPI",
     "ftype",
+    "hackthonone",
+    "Ifbd",
     "iniatiziler",
     "Jeckets",
     "orginal",
     "orignal",
     "Produtc",
     "setcart",
+    "Signup",
     "Webp"
   ],
   "[typescript]": {
