--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "18.2.4",
     "@vercel/postgres": "^0.4.0",
     "autoprefixer": "10.4.14",
+    "drizzle-orm": "^0.27.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "firebase": "^9.23.0",
