--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vercel/postgres": "^0.4.0",
     "autoprefixer": "10.4.14",
     "drizzle-orm": "^0.27.0",
+    "encoding": "^0.1.13",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "firebase": "^9.23.0",
